[gd_scene load_steps=6 format=2]

[ext_resource path="res://Player/LazerBeam.gd" type="Script" id=1]
[ext_resource path="res://Sound/164102__bmaczero__laser.wav" type="AudioStream" id=3]

[sub_resource type="Curve" id=12]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.628788, 0.990385 ), 0.0, 0.0, 0, 0, Vector2( 0.992424, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=13]
offsets = PoolRealArray( 0, 0.826087 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Environment" id=10]
background_mode = 4
glow_enabled = true
glow_intensity = 0.5
glow_blend_mode = 0
glow_hdr_luminance_cap = 2.0
glow_bicubic_upscale = true

[node name="LazerBeam" type="RayCast2D"]
position = Vector2( 64, 80 )
cast_to = Vector2( 10000, 0 )
script = ExtResource( 1 )

[node name="Line2D" type="Line2D" parent="."]
points = PoolVector2Array( 0, 0, 207, 0 )
width = 2.0
default_color = Color( 0.286275, 0.74902, 0.854902, 1 )

[node name="Tween" type="Tween" parent="."]

[node name="CastingParticles" type="CPUParticles2D" parent="."]
lifetime = 0.3
gravity = Vector2( 0, 0 )
initial_velocity = 120.0
scale_amount = 3.0
scale_amount_curve = SubResource( 12 )
color_ramp = SubResource( 13 )

[node name="CollisionParticles" type="CPUParticles2D" parent="."]
lifetime = 0.3
initial_velocity = 250.0
scale_amount = 3.0

[node name="BeamParticles" type="CPUParticles2D" parent="."]
lifetime = 0.3
local_coords = false
emission_shape = 2
emission_rect_extents = Vector2( 1, 1 )
tangential_accel = 100.0
scale_amount = 3.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 10 )

[node name="LazerSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
